--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DailyPic2_Android</string>
+    <string name="app_name">星途</string>
     <string name="title_home">首页</string>
     <string name="title_pic">每日一图</string>
     <string name="title_video">脉动地球</string>
